# Equipo-4

./: CMakeLists.txt  Cliente.cpp  Cliente.h  Empleado.cpp  Empleado.h  Factura.cpp  Factura.h  Persona.cpp  Persona.h  Producto.cpp  Producto.h  Reporte.cpp  Reporte.h  Tienda.cpp  Tienda.h  Turno.cpp  Turno.h  Venta.h
